<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/activity_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title"
        android:textSize="56sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="30sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/o_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_counter"
        android:textSize="80sp"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setPlayerTokens"
        app:layout_constraintBaseline_toBaselineOf="@+id/x_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/x_select" />

    <TextView
        android:id="@+id/x_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_counter"
        android:textSize="80sp"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:onClick="setPlayerTokens"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/o_select"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/instructions" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/player_indict_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/x_select"
        app:layout_constraintStart_toStartOf="@+id/x_select"
        app:layout_constraintTop_toBottomOf="@+id/x_select" />

    <TextView
        android:id="@+id/player_indict_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/o_select"
        app:layout_constraintStart_toStartOf="@+id/o_select"
        app:layout_constraintTop_toBottomOf="@+id/o_select" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_btn_background"
        android:text="@string/start"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        android:padding="5dp"
        android:onClick="startGame"
        android:layout_marginBottom="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>